     discovered all the units of the current campaign/era
   * Debug action "Change unit side" allows to change owner of empty village
     and is now renamed "Change side".
   * Debug actions "Create unit" and "Change side" used on unit in a village
     now causes a capture of that village.
   * Rewrote the layout algoritm (still a work in progress)
 * WML Engine:
   * Added [show_objectives] tag and allowed [show_if] tag in [objective]
     tags. (bug #13042)
   * Made moveto events set $x2,$y2 to the source hex. (bug #13140)
   * Story screen and parts allow using [switch], [if], [wml_message]
     and [deprecated_message] consistently at [part] and [story] levels.
     (feature/bugs #13170, #13290)
   * Added a "preload" WML event type.
   * Added ability to change the share_view team attribute using [modify_side]
     tag. Be sure to use fog=yes for that side  (bug #13320)
   * Added support for Lua scripts in WML event actions ([lua] tag)
   * [modify_side] can now change the share_view attribute
   * new tag [hide_help] in [units] allows to hide units in help when you can't
     change these unit types (main use: hide mainline units). Keys supported:
     'type' (list of types), 'race' (list of races) and 'type_adv_tree' (list
     of unit types which the whole advancement tree will be hidden. [hide_help]
     also allow to use sub-tag [not] (to hide a race but not a specific type)
   * [stone] and [unstone] have been replaced with [petrify] and [unpetrify];
     the units' "stoned" status variable has been renamed to "petrified"
   * Added the 'sub' key to [set_variable] to subtract from the variable.
 * Miscellaneous and bugfixes:
   * Added --ignore-fatal-errors option to wmlunits
   * Added --rng-seed command line option to specify a value to seed the random
     number generator with
   * Changes to logging:
     * New logdomain : uploader to see stat-upload related actions
     * The --log-domain command-line option now allows for a bit of