@@ -48,6 +48,7 @@ Version 1.7.0-svn:
       installing one, and with its entry selected.
     * Improved the sorting of the XP and traits columns in the unit list dialog
       (part of bug #13360).
+    * Fixed the MP password textbox handling of special characters.
 
   * Miscellaneous and bugfixes
     * Fixed missing unit graphics when loading a start-of-scenario savegame.
